# postamt

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md  initial-spec.md
src/: cli.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  pdf.rs  printer.rs  stamp.rs
tools/gen-stamps/: Cargo.toml
tools/gen-stamps/src/: main.rs
