[package]
name = "postamt-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
confy = "2.0.0"
dirs = "6.0.0"
hex = "0.4.3"
lopdf = "0.40.0"
printpdf = "0.9.1"
regex = "1.11.1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.11.0"
thiserror = "2.0.18"

[[bin]]
name = "postamt-rs"
path = "src/main.rs"
