[workspace]
members = [".", "tools/gen-stamps"]

[package]
name = "postamt-rs"
version = "0.1.0"
edition = "2024"
default-run = "postamt"

[[bin]]
name = "postamt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.5"
dirs = "6.0.0"
hex = "0.4.3"
lopdf = "0.40.0"
printpdf = "0.9.1"
regex = "1.11.1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
thiserror = "2.0.18"
toml = "1.1.2"
